// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedCreateBaselineButton should render correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <withRouter(Connect(CreateBaselineButton))
        permissions={
          Object {
            "baselinesWrite": true,
          }
        }
      >
        <Connect(CreateBaselineButton)
          history={
            Object {
              "action": "POP",
              "block": [Function],
              "canGo": [Function],
              "createHref": [Function],
              "entries": Array [
                Object {
                  "hash": "",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
              ],
              "go": [Function],
              "goBack": [Function],
              "goForward": [Function],
              "index": 0,
              "length": 1,
              "listen": [Function],
              "location": Object {
                "hash": "",
                "pathname": "/",
                "search": "",
                "state": undefined,
              },
              "push": [Function],
              "replace": [Function],
            }
          }
          location={
            Object {
              "hash": "",
              "pathname": "/",
              "search": "",
              "state": undefined,
            }
          }
          match={
            Object {
              "isExact": true,
              "params": Object {},
              "path": "/",
              "url": "/",
            }
          }
          permissions={
            Object {
              "baselinesWrite": true,
            }
          }
        >
          <CreateBaselineButton
            addSystemModalOpened={false}
            history={
              Object {
                "action": "POP",
                "block": [Function],
                "canGo": [Function],
                "createHref": [Function],
                "entries": Array [
                  Object {
                    "hash": "",
                    "pathname": "/",
                    "search": "",
                    "state": undefined,
                  },
                ],
                "go": [Function],
                "goBack": [Function],
                "goForward": [Function],
                "index": 0,
                "length": 1,
                "listen": [Function],
                "location": Object {
                  "hash": "",
                  "pathname": "/",
                  "search": "",
                  "state": undefined,
                },
                "push": [Function],
                "replace": [Function],
              }
            }
            location={
              Object {
                "hash": "",
                "pathname": "/",
                "search": "",
                "state": undefined,
              }
            }
            match={
              Object {
                "isExact": true,
                "params": Object {},
                "path": "/",
                "url": "/",
              }
            }
            permissions={
              Object {
                "baselinesWrite": true,
              }
            }
            toggleAddSystemModal={[Function]}
            toggleCreateBaselineModal={[Function]}
          >
            <Button
              id="create-baseline-button"
              onClick={[Function]}
              ouiaId="create-baseline-button"
              variant="primary"
            >
              <button
                aria-disabled={false}
                aria-label={null}
                className="pf-c-button pf-m-primary"
                data-ouia-component-id="create-baseline-button"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe={true}
                disabled={false}
                id="create-baseline-button"
                onClick={[Function]}
                role={null}
                type="button"
              >
                Create baseline
              </button>
            </Button>
          </CreateBaselineButton>
        </Connect(CreateBaselineButton)>
      </withRouter(Connect(CreateBaselineButton))>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`CreateBaselineButton should render correctly 1`] = `
<Fragment>
  <Button
    id="create-baseline-button"
    isDisabled={false}
    onClick={[Function]}
    ouiaId="create-baseline-button"
    variant="primary"
  >
    Create baseline
  </Button>
</Fragment>
`;

exports[`CreateBaselineButton should render mount correctly 1`] = `
<CreateBaselineButton
  addSystemModalOpened={false}
  loading={false}
  permissions={
    Object {
      "baselinesWrite": true,
    }
  }
>
  <Button
    id="create-baseline-button"
    isDisabled={false}
    onClick={[Function]}
    ouiaId="create-baseline-button"
    variant="primary"
  >
    <button
      aria-disabled={false}
      aria-label={null}
      className="pf-c-button pf-m-primary"
      data-ouia-component-id="create-baseline-button"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe={true}
      disabled={false}
      id="create-baseline-button"
      onClick={[Function]}
      role={null}
      type="button"
    >
      Create baseline
    </button>
  </Button>
</CreateBaselineButton>
`;
